--- a/scss/Components/_Ripple.scss
+++ b/scss/Components/_Ripple.scss
@@ -85,8 +85,13 @@
   @include ripple-container;
 
   .ripple-wave {
+    position: absolute;
+    border-radius: 50%;
     background-color: var(--color-success, #00a859);
     opacity: 0.3;
+    transform: scale(0);
+    pointer-events: none;
+    animation: ripple-animation 0.6s ease-out forwards;
   }
 }
 
@@ -95,8 +100,13 @@
   @include ripple-container;
 
   .ripple-wave {
+    position: absolute;
+    border-radius: 50%;
     background-color: var(--color-danger, #e1323c);
     opacity: 0.3;
+    transform: scale(0);
+    pointer-events: none;
+    animation: ripple-animation 0.6s ease-out forwards;
   }
 }
 
@@ -136,14 +146,10 @@
 }
 
 // Centered ripple (for icon buttons, FABs)
+// JavaScript (createCenteredRipple) handles positioning via inline styles
 .ripple-centered {
   .ripple-wave {
-    top: 50% !important;
-    left: 50% !important;
-    margin-top: -50%;
-    margin-left: -50%;
-    width: 100%;
-    height: 100%;
+    // No additional positioning needed - JS handles it via inline styles
   }
 }
 
